--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,6 @@ html {
 	-ms-text-size-adjust: 100%;
 	text-size-adjust: 100%;
 	scroll-behavior: smooth;
-	min-width: 300px;
 	overflow-x: hidden;
 	overflow-y: scroll;
 	text-rendering: optimizeLegibility;
@@ -205,7 +204,7 @@ small {
 }
 
 #sidebarCollapse {
-	position: fixed;
+	position: absolute;
 	top: 0;
 	right: 0;
 	z-index: 997;
@@ -234,8 +233,8 @@ small {
 .overlay {
 	display: none;
 	position: fixed;
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
+	height: 100%;
 	background: linear-gradient(to right, #9e9c9c6c, rgba(0, 0, 0, 0.473));
 	z-index: 998;
 	opacity: 0;
@@ -314,8 +313,7 @@ a[data-toggle="collapse"] {
 	position: relative;
 	height: 100%;
 	min-height: 600px;
-	width: 100%;
-	min-width: 320px;
+	width: 100vw;
 	background: linear-gradient(195deg, rgba(255, 255, 255, 0.767), rgba(0, 0, 0, 0.705)),
 		url(../resources/images/hero-7.jpg);
 	background-size: cover;
